# price-tracker-agent

./: .gitignore  README.md  app.py  product_data.json  pyproject.toml  requirements.txt
agents/: crewai_agents.py
notifier/: test.py
